Changed all gradle.build - run restBuilder.
