# headless-guestbookentries-impl/rest-openapi.yaml
@@ -54,7 +54,9 @@ components:
           type: string
       type: object
 info:
-    description: "HeadlessGuestbookentries REST API"
+    description:
+        "HeadlessGuestbookentries REST API. A Java client JAR is available for use with the group ID 'com.liferay',
+        artifact ID 'com.liferay.docs.headless.guestbookentries.client', and version '1.0.0'."
     license:
         name: "Apache 2.0"
         url: "http://www.apache.org/licenses/LICENSE-2.0.html"
@@ -67,6 +69,7 @@ openapi: 3.0.1
 paths:
   "/guestbookentries":
     get:
+      operationId: getGuestbookentriesPage
       tags: ["Guestbookentry"]
       description: Retrieves the list of guestbookentries. Results can be paginated, filtered, searched, and sorted.
       parameters:
@@ -105,6 +108,7 @@ paths:
                   $ref: "#/components/schemas/Guestbookentry"
                 type: array
     post:
+      operationId: postGuestbookentry
       tags: ["Guestbookentry"]
       description: Create a new Guestbookentry.
       requestBody:
@@ -127,6 +131,7 @@ paths:
                 $ref: "#/components/schemas/Guestbookentry"
   "/guestbookentries/{entryId}":
     get:
+      operationId: getGuestbookentry
       tags: ["Guestbookentry"]
       description: Retrieves the guestbookentry via its ID.
       parameters:
@@ -146,6 +151,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Guestbookentry"
     put:
+      operationId: putGuestbookentry
       tags: ["Guestbookentry"]
       description: Replaces the Guestbookentry with the information sent in the request body. Any missing fields are deleted, unless they are required.
       parameters:
@@ -173,6 +179,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Guestbookentry"
     patch:
+      operationId: patchGuestbookentry
       tags: ["Guestbookentry"]
       description: Replaces the Guestbookentry with the information sent in the request body. Any missing fields are deleted, unless they are required.
       parameters:
@@ -200,6 +207,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Guestbookentry"
     delete:
+      operationId: deleteGuestbookentry
       tags: ["Guestbookentry"]
       description: Deletes the Guestbookentry and returns a 204 if the operation succeeds.
       parameters:
@@ -213,3 +221,4 @@ paths:
           description: ""
           content:
             application/json: {}
+            application/xml: {}
